--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,4 @@
-atomicwrites==1.3.0
-attrs==19.3.0
-aws==0.2.5
-bcrypt==3.1.7
-boto==2.49.0
-cffi==1.14.0
-click==7.1.1
-colorama==0.4.3
-cryptography==2.8
-fabric==2.5.0
-Flask==1.1.1
+pyjwt==1.7.1
+flask==1.1.1
 gunicorn==20.0.4
-importlib-metadata==1.5.0
-invoke==1.4.1
-itsdangerous==1.1.0
-Jinja2==2.11.1
-MarkupSafe==1.1.1
-more-itertools==8.2.0
-packaging==20.3
-paramiko==2.7.1
-pluggy==0.13.1
-prettytable==0.7.2
-py==1.8.1
-pycparser==2.20
-PyJWT==1.7.1
-PyNaCl==1.3.0
-pyparsing==2.4.6
 pytest==5.4.1
-six==1.14.0
-wcwidth==0.1.8
-Werkzeug==1.0.0
-zipp==3.1.0
